<resources>

        <string name="app_name">PrologDigital</string>

        <string name="getThisApp">השג את המוצר הזה</string>
        <string name="wouldLikeGetThisApp">התרצה להשיג את המוצר הזה?</string>
        <string name="moreAppsTitle">מוצרים נוספים</string>
        <string name="decideToUpgrade">החלטת לשדרג? מצוין!</string>
        <string name="upgradeNow">שדרג עכשיו</string>
        <string name="notNow">לא כרגע</string>
        <string name="restore">שחזר רכישות</string>
        <string name="selectLesson">בחר פרק או שיעור שברצונך ללמוד</string>
        <string name="clickLesson">למעבר למוצר זה לחץ על הכפתור</string>
        <string name="itemNotAviable">פריט זה יתאפשר רק לאחר רכישת המוצר</string>
        <string name="downloadingCourse">סבלנות: מכינים פריטי לימוד</string>
        <string name="loadingVideo">סבלנות: מכינים סרטי הווידיאו</string>
        <string name="loadingPDF">סבלנות: מכינים ספרי הלימוד</string>
        <string name="noInternet">אופסס. בדוק חיבור לאינטרנט</string>
        <string name="noInternetOK">OK</string>
        <string name="wouldLikeUpgrade">התרצה לשדרג מוצר זה בעבור</string>


    <!--
     <string name="app_name">Hebrew</string>
     <string name="getThisApp">Get this App</string>
     <string name="wouldLikeGetThisApp">Would you like to get this app?</string>
     <string name="moreAppsTitle">More products</string>
     <string name="decideToUpgrade">Upgrading?.. Great!</string>
     <string name="upgradeNow">Upgrade now</string>
     <string name="notNow">Not now</string>
     <string name="restore">Restore purchases</string>
     <string name="selectLesson">Select a lesson or chapter</string>
     <string name="clickLesson">Click selected lesson again to enter it</string>
     <string name="itemNotAviable">This item is available only after purchase</string>
     <string name="downloadingCourse">Patience please: preparing learning items</string>
     <string name="loadingVideo">Patience please: preparing video lessons</string>
     <string name="loadingPDF">Patience please: preparing PDF files</string>
     <string name="noInternet">Ooops! Please check your internet</string>
     <string name="noInternetOK">OK</string>
     <string name="wouldLikeUpgrade">Would you like to upgrade this product for </string>
     -->
</resources>
