<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/lessonLayer"
        android:background="#ffffff"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="10dp">

        <ImageButton
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/closeLessonButton"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/chevron_black_up"
            android:scaleType="fitStart"
            android:background="@null"
            android:onClick="showLesson" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/large_text"
            android:text="@string/selectLesson"
            android:id="@+id/textView"
            android:textColor="#000000" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lessonButtonsScrollView">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/lessonsContainer"
                android:gravity="center"></LinearLayout>
        </ScrollView>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/clickLesson"
            android:id="@+id/selectItemText"
            android:textColor="#000000"
            android:textSize="@dimen/large_text"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/itemNotAviable"
            android:id="@+id/itemNotAviableText"
            android:textColor="#000000"
            android:textSize="@dimen/large_text"
            android:textAlignment="center"/>

        </FrameLayout>

    </LinearLayout>

</LinearLayout>